exploration_server: modify server, now using move_base_flex

--- a/exploration_server/CMakeLists.txt
+++ b/exploration_server/CMakeLists.txt
@@ -4,7 +4,7 @@ project(exploration_server)
 set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++14;-Wall;-Werror")
 
 
-find_package(catkin REQUIRED COMPONENTS actionlib costmap_2d exploration_msgs roscpp move_base_msgs tf)
+find_package(catkin REQUIRED COMPONENTS actionlib costmap_2d exploration_msgs roscpp move_base_msgs tf robotnik_navigation_msgs)
 
 catkin_package(
   INCLUDE_DIRS include
