--- a/exploration_server/package.xml
+++ b/exploration_server/package.xml
@@ -20,6 +20,7 @@
   <depend>costmap_2d</depend>
   <depend>exploration_msgs</depend>
   <depend>move_base_msgs</depend>
+  <depend>robotnik_navigation_msgs</depend>
   <depend>polygon_layer</depend>
   <depend>roscpp</depend>
   <depend>tf</depend>
